@@ -1,5 +1,15 @@
 2003-03-06  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* [w3m-dev 03793] incremental search fix
+	* main.c (dispincsrch): revert sbuf.pos fix
+			start from next position in next forward search
+		(srch): start from next position in forward saerch
+			if not found, restore original position
+		(srch_nxtprv): start from next position in next forward search
+	* search.c (forwardSearch): search from current position
+
+2003-03-06  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* [w3m-dev 03792] URL match string
 			incremental search fix
 	* main.c (chkURLBuffer): allow - at end of URL string
